--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+
+* {
+  box-sizing: border-box
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,47 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  /*Colour Variables*/
+  --primary-main: #d3d7d8;
+  --primary: #25373b;
+
+  /*Secondary Colours*/
+  --secondary-main: #31cf30;
+  --secondary-80: #5ad959;
+  --secondary-60: #84e283;
+  --secondary-40: #adecac;
+  --secondary-20: #d6f5d6;
+
+  /*Accent Colours*/
+  --accent-main: #1692ad;
+  --accent-80: #44a8be;
+
+  /*Status Colours*/
+  --success: #34d399;
+  --info-links: #60a5fa;
+  --warning: #fbbf24;
+  --error: #f87171;
+  --error-shadow: #faeaea;
+  --surface-success: #aee9d1;
+
+  /*Other colours*/
+  --text-color: #202223;
+  --ink-lighter-color: #697d95;
+  --ink-light: #4f5e71;
+  --cloud-normal: #eff2f5;
+  --cloud-darker: #bac7d5;
+  --cloud-lighter: #fafafa;
+  --text-subdued: #6d7175;
+  --dark-color: #252f40;
+  --surface-highlight: #a4e8f2;
+  --default: #e4e5e7;
 }
